Has uuid trait
